--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,6 +22,7 @@ ja:
         password: 新しいパスワード
         password_confirmation: 新しいパスワードの確認
       item:
+        images: 商品画像
         name: 商品名
         user_id: 出品者
         point: ポイント
